# Memori-explore

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: cli.md  troubleshooting.md
docs/features/: architecture.md
docs/getting-started/: basic-usage.md  installation.md  quickstart.md
docs/research/: modal-onboarding-auth.md
memori/: __init__.py  __main__.py  _auth.py  _exceptions.py  _network.py  _token_flow.py  cli.py
memori/api/: _sign_up.py
memori/storage/cockroachdb/: _cluster_manager.py  _display.py
scripts/: auth_sim_login.html  auth_sim_server.py  smoke_memori_auth.sh
tests/: test_network.py
tests/storage/cockroachdb/: test_storage_cockroachdb_display.py
